@@ -2,10 +2,12 @@ count source line and visualize (using R)
  o implement countLine function to count cpp source file <2012-02-18, Sat>
  o add script to get files in each folder, count source lines of each foler
    and visualize using barplot <2012-02-20, Mon>
+ o pre-allocate allLen variable <2012-02-29, Wed>   
 
    
 chapter 8
- o implemented exercies 1-2 <2012-02-27, Mon>
+ o implemented exercies 3-5 <2012-02-29, Wed>
+ o implemented exercies 1-2 <2012-02-27, Mon> 
  
 chapter 7
  o implemented exercies 7-9 <2012-02-23, Thu> 
